Fix header alignment issue

--- a/public/main.css
+++ b/public/main.css
@@ -13,6 +13,10 @@ body {
   height: 60px;
 }
 
+.logo-link-container {
+  margin: 0 auto;
+}
+
 .background-image {
   opacity: .4;
   position: fixed;
@@ -24,8 +28,8 @@ body {
   width: 100%;
   background-color: rgba(255,255,255);
   /* background-color: rgba(255,255,255,0.90); */
-  /* z-index: 1; */
   top: 0;
+  /* margin: 0 auto; */
 }
 
 .right-nav-container {
